--- a/kththesis/references.bib
+++ b/kththesis/references.bib
@@ -13,7 +13,7 @@
     url = {http://speed.cis.nctu.edu.tw/~ydlin/QoE.pdf}
 }
 
-@article{Biørn-HansenAndreas2019AiCM,
+@article{animation_performance,
     year = {2019},
     title = {Animations in Cross-Platform Mobile Applications: An Evaluation of Tools, Metrics and Performance},
     language = {eng},
@@ -48,9 +48,18 @@
   url={https://www.sciencedirect.com/science/article/pii/S187705091930955X/pdf?md5=d0b80a86ff24451802edb3535e1638c4&pid=1-s2.0-S187705091930955X-main.pdf}
 }
 
-
-
-
+@article{smooth_gui,
+  author[1]={Lin, Y.},
+  author[2]={Chu, E.T.},
+  author[3]={Chang, E.},
+  author[4]={Lai, Y.},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics: Systems}, 
+  title={Smoothed Graphic User Interaction on Smartphones With Motion Prediction}, 
+  year={2020},
+  volume={50},
+  number={4},
+  pages={1429-1441},
+}
 
 @misc{YbergViktor2018NPaU,
     series = {TRITA-EECS-EX},
@@ -416,6 +425,13 @@
     url={https://github.com/ChromeDevTools/awesome-chrome-devtools},
     year={2020},
     title={Awesome Chrome DevTools},
+}
+
+@online{telemetry,
+    url={https://github.com/catapult-project/catapult/blob/master/telemetry/README.md},
+    year={2020},
+    title={Telemetry}
+    
 }
 
 @inproceedings{crossplatform_approaches,
