--- a/kththesis/references.bib
+++ b/kththesis/references.bib
@@ -431,7 +431,27 @@
     url={https://github.com/catapult-project/catapult/blob/master/telemetry/README.md},
     year={2020},
     title={Telemetry}
-    
+}
+
+@inproceedings{cpu_sampling,
+  title={A Randomized Sampling Clock for CPU Utilization Estimation and Code Profiling.},
+  author[1]={McCanne, Steven},
+  author[2]={Torek, Chris},
+  booktitle={USENIX Winter},
+  pages={387--394},
+  year={1993},
+  organization={Citeseer}
+}
+
+@inproceedings{cpu_emulator,
+  title={Testing CPU emulators},
+  author[1]={Martignoni, Lorenzo},
+  author[2]={Paleari, Roberto},
+  authore[3]={Roglia, Giampaolo Fresi},
+  author[4]={Bruschi, Danilo},
+  booktitle={Proceedings of the eighteenth international symposium on Software testing and analysis},
+  pages={261--272},
+  year={2009}
 }
 
 @inproceedings{crossplatform_approaches,
