--- a/kththesis/examplethesis.tex
+++ b/kththesis/examplethesis.tex
@@ -6,6 +6,7 @@
 \usepackage{blindtext} % This is just to get some nonsense text in this template, can be safely removed
 \usepackage{hyperref}
 \usepackage{subcaption}
+\usepackage{array}
 
 \usepackage{csquotes} % Recommended by biblatex
 \usepackage[style=numeric,sorting=none,backend=biber]{biblatex}
@@ -319,6 +320,7 @@ Lee et al. \cite{Pride_Prejudice} explored the security system behind the push n
 
 \paragraph{}
 Khan et al. \cite{pwa_ahp} compared native, mobile web, hybrid and progressive web apps using an Analytical Hierarchy Process with three criteria : application size, multi-platform support and offline accessibility. They concluded in the superiority of Progressive Web Apps.  
+\todo[inline]{Add peer reviewed papers}
 
 \paragraph{}
 Lastly, at the time of writing only two research papers examined the user experience offered by Progressive Web Apps. Cardieri and Zaina \cite{PWA_UX_comparison_study} conducted a qualitative analysis of user experience on three platforms: web mobile, native android and PWA. They concluded that there was no significant difference of user experience between the platforms. Fredrikson \cite{emulating_native_w_crossplatform} also supports this conclusion with a quantitative and a qualitative study comparing user experience with a React Native App, a Native Android App and a Progressive Web App. 
@@ -359,8 +361,8 @@ analyze the smoothness performance with jank, i.e. the number of non-updated scr
 As there is no real consensus on the metrics to use to analyze smoothness performance,  the first part of this study will focus on finding a relevant and measurable metric to compare the smoothness of android applications and progressive web apps.
 
 
-\todo[inline]{Try to extend this subsection. You can emphasize that there is no documentation to create smoothness research, since your model inferring was empirical.}
-\todo[inline, color=cyan!20]{Done. (I think)}
+%\todo[inline]{Try to extend this subsection. You can emphasize that there is no documentation to create smoothness research, since your model inferring was empirical.}
+%\todo[inline, color=cyan!20]{Done. (I think)}
 
 
 \paragraph{}
@@ -443,7 +445,7 @@ This chapter will present the methods used to compare the smoothness performance
     
  Chrome Devtools performance panel provides an overview of a webpage's frames. It can display the frames rendered in a timeline, with its duration and CPU time. However, upon looking at its source code \footnote{Source code: TODO insert} it seems a frame starts with an event 'BeginFrame' and ends either because it is drawn (event 'DrawFrame') or because another starts (another 'BeginFrame'). This definition of a frame is too broad to compare them with Android frames. Moreover, Chrome Devtools does not consider events from the GPU Process at all when computing frames though they are finished there.
  \paragraph{}
- Telemetry can also measure metrics specific to rendering \footnote{see rendering Benchmarks: https://chromium.googlesource.com/chromium/src/+/master/docs/speed/benchmark/harnesses/rendering.md} such as frame times, percentage smothness or ui frame times. However, upon closer inspection of those metrics\footnote{https://source.chromium.org/chromium/chromium/src/+/master:third_party/catapult/tracing/tracing/metrics/rendering/frame_time.html}, it occurs the frame times are also defined as the time span between buffers swaps. Thus, Telemetry cannot be used either.
+ Telemetry can also measure metrics specific to rendering \footnote{see Rendering Benchmarks: https://chromium.googlesource.com/chromium/src/+/master/docs/speed/benchmark/harnesses/rendering.md} such as frame times, percentage smoothness or ui frame times. However, upon closer inspection of those metrics\footnote{https://source.chromium.org/chromium/chromium/src/+/master:third_party/catapult/tracing/tracing/metrics/rendering/frame_time.html}, it occurs the frame times are also defined as the time span between buffers swaps. Thus, Telemetry cannot be used either.
  
  \paragraph{}
  Hence, a more detailed rendering pipeline is needed in order to detect exactly when a frame starts and is pushed to SurfaceFlinger.
@@ -462,161 +464,239 @@ This chapter will present the methods used to compare the smoothness performance
 \paragraph{}
 Nevertheless, the events triggering this buffer swap still remain unknown. Only one documentation was found that explained partially how to visualize frames on Chrome Tracing tool \footnote{https://www.chromium.org/developers/how-tos/trace-event-profiling-tool/using-frameviewer}. However, it seems to be out-dated as the functions did not all have the same name and the pipeline presented was not entirely consistent with the current traces. 
 
-Thus, a model of Chrome's frames pipeline was built empirically, by playing with the event categories and by trial-and-error. To automate tracing, the Chrome Devtools Protocol
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-    
+Thus, a model of Chrome's frames pipeline was built empirically with an iterative process. It is possible to download a trace from Chrome Tracing tool as a JSON file containing all the events recorded. With the 'Tracing' domain of Chrome Devtools Protocol, it is possible to output the same file automatically. The resulted JSON file was then processed by a script which tracked the start and end of the frames as predicted by the empirical model. If any error was raised, a visualization of the events on Chrome Tracing tool and a revision of the code allowed either to fix a bug in the code or to change the model according to the events observed. \newline
+The model was first built with the same benchmark progressive web app: a single-page application with a text changing every few milliseconds and a button which increased a number displayed at each click. It was then confronted with 80 traces of 8 different PWAs. This confrontation was done 3 times, each with new PWAs until no significant errors remained. The reasons for the remaining errors were: \newline
+\textendash  edge effects: the start and end of a recording can happen anywhere on a frame's timeline. Some events, which require previous events or child events according to the model can raise an error. Those errors are kept to a minimum, but can still happen as the recording does not seem to start or end at the same time for all threads. \newline
+\textendash  embedded iframes or videos: as will be explained in more details later, every frame rendered is actually composed of aggregated surfaces. Each iframes or videos adds a surface and complicates the model, making it more difficult to follow the frames. As this project limits to simple apps with no videos or third-party advertisement, those errors are ignored. 
+
+The model presented in Figure \ref{fig:chrome_graphics_simple} represents the events tracked during a recording to extract the start and end of a frame before it is sent to SurfaceFlinger and displayed on the screen. It is possible for frames to be dropped anywhere in the pipeline so it is important to follow its step from start to finish, ideally with an id. The complete diagram with dropping events is available in Annex \ref{}.
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=15cm]{kththesis/Figures/Chrome_graphics_simple.png}
+    \caption{Model of Chrome Graphics Pipeline}
+    \label{fig:chrome_graphics_simple}
+\end{figure}
         
-        
+ \paragraph{}
+A frame in Chrome is actually a combination of at least 2 surfaces: a Browser surface and a Renderer surface. There can be more if there are embedded iframes, for example a video. However, that is outside the scope the scope of this study and they are not represented in this model. The browser surface represents the elements belonging solely to the browser, for instance the scrollbar or the refresh animation in PWA (if they are not overwritten by the web app), or the address bar in other web apps. The Renderer surface represents the elements belonging to the Web App, that is everything that is not the Browser if there is no other process embedded in the application. If just one surface changes, the VizCompsitor thread aggregates the surfaces displayed, new ones and those saved in memory, sends the aggregation to the main thread of the GPU Process, CrGpuMain which sends it to SurfaceFlinger by swapping buffers. 
+\paragraph{}
+The Renderer surface can actually be computed using two different path depending on the stages skipped: the 'Main frame' and the 'Basic Frame' in the model. The 'Main frame' is the baseline of every surface of the Renderer. However, if only a small change occurs between 2 consecutive frames, the 'Main frame' may not need to be re-computed and is used again in the current frame. This is the 'Basic frame' path. \newline
+To link the empirical model to the pipeline stages presented in the background, Parsing, Styling, Layout, Compositing, Pre-painting, and Painting are all computed for a 'Main frame' in the main thread of the Renderer process CrRendererMain. Tiling and Raster are also computed for a 'Main frame' but in the Compositor thread, sometimes with the help of other threads and even the GPU Process. The last step, Drawing is executed in several steps. The Compositor thread first computes a 'CompositorFrame' from the 'Main frame' available and sends to the VizCompositorThread in the GPU Process. The VizCompositorThread wait for all necessary surfaces and aggregates them, before sending them to the main thread of the GPU Process. CrGpuMain can then swap the buffers to push the frame to SurfaceFlinger. The frame is now complete.
+
+\paragraph{}
+To sumurize, a frame timeline is as follows:
+\begin{enumerate}
+    \item The VizCompositorThread, probably because of a VSYNC event that happened previously, asks for a new frame to the Renderer process (cf \textit{IssueBeginFrame}).
+    \item The Compositor thread of the Renderer process agrees to compute a new frame (cf \textit{ReceiveBeginFrame}) and schedules it (cf \textit{Scheduled}).
+    \item The Compositor might also ask for a new main frame (cf \textit{SendRequestMainFrame}). If so, the main thread of the Renderer process CrRendererMain compiles it (cf \textit{BeginMainFrame}). In regards to the pipeline stages presented in the background, it computes the Styling, Layout, Compositing, Pre-Painting and Painting. When CrRendererMain is finished compiling the main frame, it commits it to the Compositor (cf \textit{BeginMainFrameCommit}).
+    \item When the Compositor receives a new main frame (cf \textit{BeginCommit}), it computes Tiling and Raster if necessary with the help of other threads. The main frame can then be activated (cf \textit{ActivateLayerTree}): it replaces the old main frame in the memory of the Compositor thread and can be used as a baseline for future frames.
+    \item Once the deadline scheduled in step 2 is up, the frame is drawn. This step is the last stage of pipeline presented previously: Drawing. The Compositor generates a ComositorFrame (cf \textit{GenerateRenderPass} and \textit{GenerateCompositorFrame}) with a main frame as a baseline and sends it to the GPU Process (cf \textit{SubmitCompositorFrame}).
+    \item The VizCompositorThread receives all necessary surfaces (cf \textit{ReceiveCompositorFrame}), aggregates them into a single frame (cf \textit{SurfaceAggregation}) and sends it to CrGpuMain thread.
+    \item Finally, CrGpuMain receives the frame and swap buffers for SurfaceFlinger (cf \textit{SwapBuffers} and \textit{FrameCompleted})
+\end{enumerate}
+
+However, the computation of a new main frame (step 3 and 4) is not always synchronized with the computation of a base frame. For example, due to various reasons CrRendererMain might be late in committing the main frame, and a new base frame is renderered without it. Then, the main frame will be activated only for the following frame.
+
+\paragraph{}
+A browser frame follows a similar timeline. The only difference is that all work computed by the Compositor thread and CrRendererMain is done in the same in the same thread, CrBrowserMain. Also, a 'main frame' is always computed for a BrowserFrame. 
+
     \subsection{Method of comparison}
-        \todo[inline, color=cyan!20]{Conclusion}
+        %\todo[inline, color=cyan!20]{Conclusion}
+
+A frame timeline is very different on Chrome and Android.
+
+On one hand, Android's pipeline is pretty straightforward and easy to follow : the OS sends VSync signals that depends on the device refresh rate, asking everything on the foreground to render a frame. In response, the UI thread calls Choreographer\#doFrame which handles callbacks for input and animation before doing some sizing and layout. The Choreographer then hands what it computed to the RenderThread which issues the draw commands and swap the buffers for SurfaceFlinger.
+
+\paragraph{}
+On the other hand, Chrome's pipeline is much less consistent and depends on a lot of parameters. The VizCompositorThread also calls the Choreographer regularly after VSYNC signals but stop the process at animation callbacks. On Chrome's pipeline, the VizCompositorThread is also the one to start the frame. One animation callback of the Choreographer might well trigger the start of the frame on VizCompositorThread, but no documentation is available to confirm this hypothesis and to give the time span between VSYNC signal and the start of the frame in Chrome.
+
+\paragraph{}
+Thus, it is meaningless to compare Chrome's frames with Android's from VSYNC signal.
+
+\paragraph{}
+Another method is to compare the time it takes for to swap buffers from the moment it decides to compute a new frame. That means from the start of the Choreographer for Android and the 'IssueBeginFrame' event for Chrome according to the empirical model. However, 'IssueBeginFrame' which is considered the start of the frame on Chrome might be triggered by other events that were not detected. Thus, this measure would be too inaccurate on Chrome. \newline
+Moreover, the input events also pose a problem. Those are always handled on Android inside the Choreographer, just before computing the frame. However they are handled asynchronously on Chrome and can even be handled in the middle of the computation of a new frame. An input event can affect a frame currently being drawn or start a new one. With this method of comparison, some of the frames on Chrome would contain input events while others would not. Thus, it is irrelevant. 
+
+The last possible comparison is the amount of time they spent on computing the frame before swapping buffers. For Android, it starts with 'Traversal', and can be accessed with the \textit{PerformTraversalStart} timestamp. For Chrome, it depends on the type of frame pushed to SurfaceFlinger. There are 4 main issues :
+\begin{enumerate}
+    \item When do Chrome starts computing a Main Frame ? \newline
+    As the first stages of Chrome's pipeline happens just after \textit{BeginMainFrame}, this timestamp will be considered the start of the computation for a Main Frame.
+    \item When do Chrome starts computing a Basic Frame that re-uses a Main Frame ? \newline
+    The only stage of Chrome's pipeline computed in a Basic Frame is Drawing, which starts at 'ProxyImpl::ScheduleActionDraw' event. Thus, it will be considered the start of the computation of a Basic Frame.
+    \item Do frames which only changes the Browser surface count as frames to compare to Android application ? \newline
+    The Browser surface represents on PWA what is usually also handled by the application on Android (scrollbar, refresh animation). Thus, those frames will also be compared to Android frames. 
+    \item When both the Renderer surface and the Browser surface changes, what to consider the start of the frame ? \newline
+    Since both Browser frames and Renderer frames are to be compared to Android, and they are pushed to SurfaceFlinger as a single frame, the start of the frame will be the start of the Browser or the Renderer frame depending on which happens the earliest. 
+\end{enumerate}
+
+\paragraph{}
+Therefore, Android and Chrome frames will be compared with their duration, that is from the time Android and Chrome start actively computing the frame until the buffers are swapped. 
+
+
 \section{Memory}
     \todo[inline, color=cyan!20]{This section might be a little empty, but better to have CPU with a section on its own}
-    \subsection{Android}
-    \subsection{Chrome}
+    %\subsection{Android}
+    %\subsection{Chrome}
+
+The memory in Android can be inspected with the service \textit{meminfo} of \textit{adb shell dumpsys}. Used with a package name, it takes a snapshot of its memory and outputs detailed information about the memory used: the java and native heap, the memory used by the code and the total amount of memory used by the application, among others. The details of most interest are the total amount of RAM used by the application and the memory used by the graphics buffer queue.
+
+\paragraph{}
+Without a package name, this command line outputs the total amount of RAM used for each process. The processes are also ordered by section : persistent, foreground, visible and cached among others. \newline
+The foreground section is the most interesting. When an android application is running, only its process appears on the foreground. However when a PWA is running, 3 processes appear on the foreground: chrome package, a sandboxed sub-process of chrome, and a privileged sub-process of chrome. Those represents respectively the Browser process, the Renderer process and the GPU process. This means all three processes needs to be considered when measuring the memory used by PWA. 
+
+\paragraph{}
+Two aspects of memory will be measured to compare Android and Progressive Web Apps: the RAM and the memory used for graphics buffer queue. For Progressive Web Apps, those measures will be the result of the addition of the 3 processes on the foreground: the Browser, the Renderer and the GPU processes.
+    
 \section{CPU}
     \subsection{Android}
         \todo[inline, color=cyan!20]{present cpuinfo and top}
+
+There are 2 command-lines that can be used to measure \%CPU on Android: \textit{adb shell top} and \textit{adb shell dumpsys cpuinfo}. Top is similar to the Linux command of the same name, but with limited options. On Android, it is not possible to change the display from percentage of total CPU available to percentage of CPU core. This makes it less accurate than cpuinfo. Thus, cpuinfo will used to measure \%CPU of android applications. 
+
+\todo[inline, color=cyan!20]{Should I move this paragraph to scripts implementation ?}
+However, there is a small issue with cpuinfo: the output is not always up-to-date, with sometimes a 15 min difference between the data displayed and the time it is called (it will display 'CPU usage from X ms to X ms ago'). This makes it difficult to use for automated experiments. Thankfully, upon inspecting the source code\footnote{https://github.com/aosp-mirror/platform\_frameworks\_base/blob/master/services/core/java/com/android/server/am/ActivityManagerService.java} of meminfo and cpuinfo, it was found that the data saved by cpuinfo is updated each time meminfo is called. It was observed that was not always the case when 2 consecutive calls are too close to each other, but it is enough to have CPU usage from at least the last minute.
+
     \subsection{Chrome}
         \todo[inline, color=cyan!20]{CPU of Chrome devtools not good}
+
+The same command line as Android can be used to measure CPU usage for Progressive Web Apps by adding the CPU usage of the 3 main processes (Browser, Renderer, GPU). 
+However, some of the CPU usage measured by dumpsys might not come from the application in itself but some other work from the browser, or other applications on the background. 
+Thus, other ways to obtain the CPU usage of the application was looked into. 
+
+Upon inspecting Chrome Devtools and its source code\footnote{https://github.com/ChromeDevTools/devtools-frontend}, 3 possible methods of measuring CPU usage were identified:
+\begin{enumerate}
+    \item CPU graph displayed by Chrome Devtools Performance Panel
+    \item cpuTime metric computed by Chrome Devtools for each frame
+    \item CPU sampling events saved during a recording
+\end{enumerate}
+
+\paragraph{}
+According to the source code of Chrome Devtools, the CPU graph is actually computed from the selftime of the functions. The selftime of the function is the amount of time it is running itself and does not wait for a function it called itself. Though a function usually use the CPU during its self-time, that is not always the case. The function can be paused for the CPU to perform other tasks for example. Thus, the CPU graph from Chrome Devtools, though a good approximation, is not accurate enough to compare the CPU usage of Android and Progressive Web applications. \newline
+The cpuTime metric provided for each frame is computed similarly but its computation is limited to events related to the computation of the frame. Thus, it is also not usable as an accurate measure.
+
+\paragraph{}
+This leaves the CPU sampling events saved during a recording. CPU sampling \cite{cpu_sampling} can evaluate the CPU usage by retrieving regularly the functions currently running on the CPU. The more samples taken, the more accurate the estimation will be. This method was evaluated against the command line \textit{adb shell dumpsys cpuinfo} by measuring the CPU usage of a  Progressive Web App running on an Android emulated device with both methods (CPU sampling and dumpsys). The emulated device only had a single CPU core in case the CPU sampling only happen on the CPU cores running the app. The Progressive Web App was able to simulate different CPU workload depending on the frequency of a text changing.
+\paragraph{}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=13cm]{kththesis/Figures/cpu_graph.JPG}
+    \caption{CPU usage}
+    \label{fig:cpu_usage}
+\end{figure}
+
+The results are the average of 100 measures were taken for each method (see Figure \ref{fig:cpu_usage}). If the CPU sampling from Chrome Devtools was accurate enough, its curve would be close to the measures taken by dumpsys, though always behind as \textit{dumpsys cpuinfo} provides a maximum CPU usage of the application. This is not the case here.
+
+\paragraph{}
+Thus, the CPU usage of both Android and Progressive Web application will be measured with the command line \textit{adb shell dumpsys cpuinfo}.
+    
 \section{Experiments}
     \subsection{Devices}
         \todo[inline, color=cyan!20]{Justify why not use emulators}
-    \subsection{Benchmark applications and protocol}
+
+Since emulators can provide an easy access to a large range of Android devices, their use was considered for the final experiments. However, one of the key metrics used to evaluate the smoothness of the applications is CPU usage, a hardware difficult to emulate \cite{cpu_emulator}. Thus, it is important to test the emulators against a physical device before using them.
+
+As was presented in the background, only a few Android emulators do not enhance the hardware capabilities of the emulated device. Only 3 were identified and tested : Android Emulator \cite{android_emulator}, Genymotion \cite{genymotion_emulator} and Visual Studio Android Emulator \cite{microsoft_emulator}. The metrics used to compare the performance of the emulators were the CPU usage using \textit{dumpsys cpuinfo}, the total RAM used using \textit{dumpsys meminfo} and the percentage of janky frames using \textit{dumpsys gfxinfo}. The measures were taken while the devices ran the same application that changed a text every few ms. No human interaction was necessary. \newline
+The results presented in Table \ref{tab:memulators_test} are the average of 110 measures.
+
+\begin{table}[!ht]
+    %\centering
+    \begin{tabular}{|m{2,5cm}|m{2cm}|m{2cm}|m{2cm}||m{2cm}|m{2,5cm}|}
+        \hline
+         & \multicolumn{3}{c||}{Samsung S6 (API 7.0)} & \multicolumn{2}{|c|}{Samsung S5 (API 5.0)}  \\
+         \hline
+         Metrics & Physical device & Genymotion & Android Emulator & Physical device & Visual Studio Emulator \\
+         \hline
+         CPU Usage (\%) & 72 & 29 & 18 & 48 & 16 \\
+         \hline
+         RAM (KB) & 72 080 & 24 243 & 17 499 & 56 813 & 16 992 \\
+         \hline
+         Janky frames (\%) & 13 & 46 & 6 & 3 & 98 \\
+         \hline
+    \end{tabular}
+    \caption{Emulators Tests}
+    \label{tab:memulators_test}
+\end{table}
+
+\paragraph{}
+The results between the physical devices and the emulators are too different to be used in future experiments. Thus, only the available Android smartphones will be used for this project: Samsung S6 (7.0), Samsung S5 (5.0) and Samsung Galaxy S (4.2)
+
+\todo[inline, color=cyan!20]{I might be able to also use a Huawei (old phone with no card sim), depending if it works and I have the time}
+
+    \subsection{Benchmark application and protocol}
         \todo[inline, color=cyan!20]{Present experiments}
-\iffalse
-We will focus on the fluidity of the apps that can be defined with Frame Per Second (FPS) rate.
-Thus, we will compare the FPS rate of a Native Android Application and a Progressive Web App, as well as with a benchmark consisting of : 
-    - an app displaying different image/texts every 16/17ms
-    - an app with more effort on the CPU : modification of the same pictures/texts or new pictures/texts generated randomly.
 
-\newline
-\fi
+A total of 3 benchmark applications were developed for this project: a Native Android app, a Hybrid app using React Native and a PWA using ReactJS. The frameworks React Native and ReactJS were chosen for the Hybrid and PWA because of their popularity \todo[color=cyan!20]{Find new peer-review citation} and their similarity: their common library 'react' and common architecture logic reduce the variable introduced by the difference of framework used.
 
-We will measure FPS, CPU and Memory usage to see the impact of CPU and Memory usage in the fluidity of the app.
-\newline
+\paragraph{}
+Since a frame in a Progressive Web App can take 2 different rendering path depending on the changes occurring in the frame, at least 2 different features favouring one path or another will have to be developed. The Main Frame path is always triggered when changing some content on the screen since at least Painting is required. The Basic Frame path is favoured when scrolling a page, as the Compositor thread usually only needs to change the position of an already-painted layer against the display screen. 
 
-\subsection{Scripts implementation}
+\paragraph{}
+Thus, all of the applications contains the same features: a Clicking screen where the user can change the content by clicking on the screen, a Scrolling screen where the user can scroll the page to see all the content available and a Home screen where the user can navigate to the Clicking or the Scrolling screen. The content can be changed from text to picture and vice-versa. The screenshots of the applications are available in figures \ref{fig:native_screens}, \ref{fig:hybrid_screens} and \ref{fig:pwa_screens}.
+
+\begin{figure}
+    \centering
+    \subcaptionbox{Home}{\includegraphics[width=2.1cm]{kththesis/screenshots/native_home.png}}
+    \hfill
+    \subcaptionbox{Clicking - text}{\includegraphics[width=2.1cm]{kththesis/screenshots/native_clicking_text.png}}
+    \hfill
+    \subcaptionbox{Clicking - picture}{\includegraphics[width=2.1cm]{kththesis/screenshots/native_clicking_picture.png}}
+    \hfill
+    \subcaptionbox{Scrolling - text}{\includegraphics[width=2.1cm]{kththesis/screenshots/native_scrolling_text.png}}
+    \hfill
+    \subcaptionbox{Scrolling - picture}{\includegraphics[width=2.1cm]{kththesis/screenshots/native_scrolling_picture.png}}
+    \caption{Native application}
+    \label{fig:native_screens}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \subcaptionbox{Home}{\includegraphics[width=2.1cm]{kththesis/screenshots/hybrid_home.png}}
+    \hfill
+    \subcaptionbox{Clicking - text}{\includegraphics[width=2.1cm]{kththesis/screenshots/hybrid_clicking_text.png}}
+    \hfill
+    \subcaptionbox{Clicking - picture}{\includegraphics[width=2.1cm]{kththesis/screenshots/hybrid_clicking_picture.png}}
+    \hfill
+    \subcaptionbox{Scrolling - text}{\includegraphics[width=2.1cm]{kththesis/screenshots/hybrid_scrolling_text.png}}
+    \hfill
+    \subcaptionbox{Scrolling - picture}{\includegraphics[width=2.1cm]{kththesis/screenshots/hybrid_scrolling_picture.png}}
+    \caption{Hybrid application}
+    \label{fig:hybrid_screens}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \subcaptionbox{Home}{\includegraphics[width=2.1cm]{kththesis/screenshots/pwa_home.png}}
+    \hfill
+    \subcaptionbox{Clicking - text}{\includegraphics[width=2.1cm]{kththesis/screenshots/pwa_clicking_text.png}}
+    \hfill
+    \subcaptionbox{Clicking - picture}{\includegraphics[width=2.1cm]{kththesis/screenshots/pwa_clicking_picture.png}}
+    \hfill
+    \subcaptionbox{Scrolling - text}{\includegraphics[width=2.1cm]{kththesis/screenshots/pwa_scrolling_text.png}}
+    \hfill
+    \subcaptionbox{Scrolling - picture}{\includegraphics[width=2.1cm]{kththesis/screenshots/pwa_scrolling_picture.png}}
+    \caption{Progressive Web App}
+    \label{fig:pwa_screens}
+\end{figure}
+
+\paragraph{}
+The experiments will test 4 different scenarios : changing a text, changing a picture, scrolling a test and scrolling pictures. The frame duration, the CPU and memory usage will be measured separately in order to minimize the overhead caused by the profiling tools. \newline
+The frame duration will be evaluated with a 3s recording, the memory snapshot will be executed after 10s of running a scenario in order to update the data for \textit{cpuinfo} and the CPU usage will be extracted shortly after.
+
+
+    \subsection{Scripts implementation}
 \todo[inline]{Explain your technical contributions}
+
+In order to remove the human interaction variable from the results, all experiments will be executed by automated scripts. All of them are available in a Git repository\footnote{TODO:git link, maybe create a clean repo with everything after}.
+
+\todo[inline, color=cyan!20]{I should probably finish all the scripts before doing this last part since some technical aspects can change}
+
+\paragraph{}
+
+
+
+
 
 \iffalse
 \section{(Weekly reports)}
